--- a/css/style.css
+++ b/css/style.css
@@ -6,9 +6,71 @@
     box-sizing: border-box;
 }
 
+/*######### html element styling ######## */
+html{
+    /*62.5% = 10px */
+    font-size: 62.5%;
+}
+
 body{
     font-family: 'Montserrat', sans-serif;
 }
+
+ul li{
+    list-style-type: none;
+}
+
+a{
+    /*1rem = 10px  */
+    font-size: 1.6rem;
+    text-decoration: none;
+}
+p, li{
+    font-size: 1.6rem;
+    /*em means half of rem 1.6/2 = */
+    margin-bottom: 0.5em;
+    letter-spacing: o.15em;
+}
+h1, h2, h3{
+    margin-bottom: o.5em;
+    letter-spacing: o.15em;
+    font-weight: 500;
+}
+
+/*############# utility classes ##########
+we can make untiliry classess and used one class many time 
+*/
+
+.container{
+    max-width: 1200px;
+    width: 90%;
+    margin: 0 auto;
+}
+.lg-heading{
+    font-size: 3.5rem;
+}
+
+.md-heading{
+    font-size: 2.2rem;
+}
+
+.text-red{
+    color:#e63946;
+}
+
+.text-light{
+    color:#f4f4f4;
+}
+.text-black{
+    color:#333;
+}
+.text-gray{
+    color:#555;
+}
+
+
+
+/*########## header styling ########## */
 header{
     height: 95vh;
     /* linear-gradient is used for dark img */
@@ -16,4 +78,43 @@ header{
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+}
+
+.navbar{
+    border:2px solid white;
+    padding: 1rem;
+}
+
+
+.header .navbar a{
+    color:white;
+}
+
+.header .navbar .logo{
+    float: left;
+    font-size: 3.5rem;
+}
+
+.header .navbar .nav-items{
+    float: right;
+    margin-top: 1rem;
+}
+
+.header .navbar .nav-item{
+    display: inline-block;
+    padding: 1rem;
+    text-transform: uppercase;
+    
+}
+
+.navbar a:link,
+.navbar a:visited{
+    color:#f4f4f4;
+}
+
+/* float clear */
+.navbar::after{
+    content: '';
+    display: block;
+    clear: both;
 }
