--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,22 @@ we can make untiliry classess and used one class many time
     border-radius: 10em;
 }
 
+.btn-primary:hover{
+    background-color: #ddd;
+}
+.btn-secondary{
+    border: 2px solid #e63946;
+    border-radius: 1.5em;
+    color: #e63946;
+    background: #fff;
+}
+
+.btn-secondary:hover{
+    background-color: #fcf3f2;
+}
+
+
+
 
 
 /*########## header styling ########## */
@@ -160,4 +176,44 @@ header{
 .header-content p{
     text-transform: uppercase;
 
+}
+
+
+/*############# Showcase Section Styling ############# */
+.showcase{
+    background: #ddd;
+    padding: 10rem 0;
+}
+
+.row{
+    height: 350px;
+    background: #fff;
+}
+.row1{
+    margin-bottom: 10rem;
+}
+
+.row1 .img-box, .row2 .text-box{
+    float: left;
+    width: 50%;
+}
+
+.row2 .img-box, .row1 .text-box{
+    float: right;
+    width: 50%;
+}
+
+.row .img-box{
+    height: 100%;
+}
+
+.row .text-box{
+    padding: 3rem;
+}
+.row .img-box img{
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    /*object-fit:cover is used for same aspect img ratio */
+    object-fit: cover;
 }
