--- a/css/style.css
+++ b/css/style.css
@@ -223,3 +223,34 @@ header{
     content: '';
     clear: both;
 }
+
+/*############# Features Section Styling ########### */
+
+.features{
+    padding: 10rem 0;
+}
+.box-wrapper{
+    box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.308);
+}
+.box{
+    width: 33.3333333%;
+    float: left;
+    padding: 2rem;
+    text-align: center;
+}
+
+.box-1, .box-3 {
+    background-color: #263238;
+    color: #fff;
+
+}
+.box-2{
+    background:  linear-gradient(25deg,#d64c7f,#ee4758 50%);
+    color: #fff;
+}
+
+.box-wrapper::after{
+   content: "";
+   display: block;
+   clear: both; 
+}
