--- a/css/style.css
+++ b/css/style.css
@@ -68,6 +68,11 @@ we can make untiliry classess and used one class many time
     color:#555;
 }
 
+.bg-dark{
+    background: #263238;
+}
+
+
 .btn{
     display: inline-block;
     padding: 0.5em 1.5em;
@@ -116,21 +121,21 @@ header{
 }
 
 
-.header .navbar a{
+.navbar a{
     color:white;
 }
 
-.header .navbar .logo{
+.navbar .logo{
     float: left;
     font-size: 3.5rem;
 }
 
-.header .navbar .nav-items{
+.navbar .nav-items{
     float: right;
     margin-top: 1rem;
 }
 
-.header .navbar .nav-item{
+.navbar .nav-item{
     display: inline-block;
     padding: 1rem;
     text-transform: uppercase;
@@ -266,4 +271,121 @@ header{
 
 .social-media-links i{
    margin: 2rem; 
+}
+
+
+/*######## About Page Styling ########## */
+
+.about{
+    padding: 5rem 0;
+}
+.about-heading{
+    border-bottom: 6px solid #e63946;
+}
+
+/* We can Pseudo element for drow line below about us
+.about-heading::after{
+    content: '';
+    display: block;
+    border: 3px solid #e63946;
+    width: 100%;
+}
+*/
+
+/*########## About wrapper Styling ########## */
+.about-wrapper{
+    text-align: center;
+    margin-top: 2rem;
+}
+.about-wrapper .left{
+    float: left;
+    width: 50%;
+}
+
+.about-wrapper .right{
+    float: right;
+    width: 50%;
+
+}
+/*for clear float */
+.about-wrapper::after{
+    content: '';
+    display: block;
+    clear: both;
+}
+/*For tick mark */
+.about-wrapper li::before{
+    content: '\2714';
+    color: #e63946;
+    font-weight: bold;
+    padding-right: 1rem;
+}
+
+/*########## About Count Styling ############## */
+.counts{
+    margin-top: 3rem;
+}
+
+.count-item{
+    width: 25%;
+    text-align: center;
+    float: left;
+
+}
+.counts::after{
+    content: '';
+    display: block;
+    clear: both;
+
+}
+.count-item span{
+    font-size: 3rem;
+    font-weight: 700;
+    color: #e63946;
+}
+.count-item p{
+    font-weight: 700;
+    color: #555;
+    font-size: 1.8rem;
+}
+
+/*############ About page banner Styling ########## */
+.cta-banner{
+    background:  linear-gradient(25deg,#d64c7f,#ee4758 50%);
+    color: #f4f4f4;
+    padding: 1rem;
+    box-shadow: 5px 5px 10px #00000068;
+    margin-top: 3rem;
+}
+.cta-banner-left{
+    width: 60%;
+    float:left;
+}
+.cta-banner-right{
+    width: 40%;
+    float: right;
+    text-align: right;
+}
+
+.cta-line{
+    font-weight: 700;
+    font-size: 2rem;
+    margin-top: 1.5rem;
+}
+
+.btn-cta{
+    text-align: center;
+    display: inline-block;
+    font-weight: 700;
+    font-size: 3rem;
+    text-transform: uppercase;
+    border: 4px solid white;
+    padding: o.3rem 2.5em;
+    letter-spacing: 0.5rem;
+    color: #f4f4f4;
+}
+.cta-banner::after{
+    content: '';
+    display: block;
+    clear: both;
 }
