--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,7 @@ header{
 .features{
     padding: 10rem 0;
 }
+
 .box-wrapper{
     box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.308);
 }
@@ -259,6 +260,8 @@ header{
    display: block;
    clear: both; 
 }
+
+
 
 /*############### Footer Styling ########## */
 
@@ -484,4 +487,172 @@ header{
     outline: none;
     border: none;
     cursor: pointer;
+}
+
+
+/* ############################### Media Queries ########### */
+
+/*target for   width 500px or less */
+
+@media (max-width: 500px){
+    html{
+        /* font-size: 8px; */
+        font-size: 50%;
+    }
+
+    .navbar .nav-items, .navbar .logo{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* for heding none in width 500
+    .header-content .main-heading{
+        display: none;
+    } */
+    /* for showcase section */
+    .row{
+        height: auto;
+        width: 100%;    
+    }
+
+    .row .img-bo,
+    .row .text-box{
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* feature section */
+    .features .box{
+        float: none;
+        width: 100%;
+        text-align: center;
+        box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.308);
+    }
+    .features .box-2,
+    .features .box-3{
+        margin-top: 7rem;
+    }
+
+    .box-wrapper{
+        box-shadow: none;
+    }
+
+    /* About Section */
+   .cta-banner-left,
+   .cta-banner-right {
+        float: none;
+        width: 100%;
+        text-align: center;
+   }
+
+   /*Contact Page */
+   .form-wrapper .company-address{
+    float: none;
+    width: 100%;
+    height: auto;
+    margin-bottom: 5rem;
+   }
+   .form-wrapper .form{
+    float: none;
+    width: 100%;
+    height: auto;
+
+   }
+}
+
+/* target Width 501px to 800px */
+@media (min-width:501px) and (max-width:800px){
+    html{
+        /* font-size: 8px; */
+        font-size: 50%;
+    }
+
+    p{
+        font-size: 1.8rem;
+    }
+
+    .navbar .nav-items, .navbar .logo{
+        float: none;
+        display: block;
+        width: 100%;
+        text-align: center;
+    }
+
+    
+    /* for showcase section */
+    .row{
+        height: auto;
+        width: 100%;    
+    }
+
+    .row .img-bo,
+    .row .text-box{
+        float: none;
+        width: 100%;
+        text-align: center;
+    }
+
+    /* feature section */
+    .features .box{
+        float: none;
+        width: 100%;
+        text-align: center;
+        box-shadow: 5px 5px 20px 0px rgba(0, 0, 0, 0.308);
+    }
+    .features .box-2,
+    .features .box-3{
+        margin-top: 7rem;
+    }
+
+    .box-wrapper{
+        box-shadow: none;
+    }
+
+    /* About Section */
+   .cta-banner-left,
+   .cta-banner-right {
+        float: none;
+        width: 100%;
+        text-align: center;
+   }
+
+   /*Contact Page */
+   .form-wrapper .company-address{
+    float: none;
+    width: 100%;
+    height: auto;
+    margin-bottom: 5rem;
+   }
+   .form-wrapper .form{
+    float: none;
+    width: 100%;
+    height: auto;
+
+   }
+}
+
+
+/* target more than 800px */
+
+@media(min-width: 801px)  and (max-width:1200px){
+    html{
+        font-size: 56,25%;
+    }
+
+    .rpw .text-box h2{
+        font-size: 2.2rem;
+        font-weight: 500;
+
+
+    }
+
+}
+/*For landscape application landscape - width is more and height is less*/
+@media(orientation: landscape) and (max-height: 500px){
+    .header{
+        height: 90vmax;
+    }
 }
